# Fast-and-Robust-Tri-Intersections-with-different-Num-Reprs

./: .gitignore  CMakeLists.txt  README.md  main.cpp  orientTemplated.cpp  orientTemplated.h  printIntersections.cpp  printIntersections.h  tri_tri_intersect.cpp  tri_tri_intersect.h
